# RefineMyWords

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: update_space.yml
backend/: main.py  pyproject.toml  test_api.py
frontend/: interface.py
test/: test_api_local.py  test_api_prod.py
