[tool.poetry]
name = "refinemywords"
version = "0.1.0"
description = ""
authors = ["qivaijar <qivaijar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
torch = "^2.4.1"
transformers = "^4.45.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
