[tool.poetry]
name = "refinemywords"
version = "0.1.0"
description = ""
authors = ["qivaijar <qivaijar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
torch = "^2.4.1"
happytransformer = "^3.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
requests = "^2.32.3"
fastapi-cli = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
